--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,9 @@
 name: flutter_app_pay_api
 description: "Thin, stable API for flutter_app_pay: shared interfaces and DTOs used by the core and provider plugins."
 version: 0.1.0
-homepage:
+homepage: https://github.com/Kotelnikovekb/flutter_app_pay_api
+repository: https://github.com/Kotelnikovekb/flutter_app_pay_api
+issue_tracker: https://github.com/Kotelnikovekb/flutter_app_pay_api/issues
 
 environment:
   sdk: ">=3.0.0 <4.0.0"
